Fix display on mobile

--- a/BlazorWeather/wwwroot/css/site.css
+++ b/BlazorWeather/wwwroot/css/site.css
@@ -30,7 +30,7 @@ html, body {
 }
 
     .weather-now h1 {
-        font-size: 2rem;
+        font-size: 1.5rem;
         font-weight: 200;
         letter-spacing: 1px;
         text-align: center;
@@ -132,7 +132,6 @@ html, body {
 
     .weather-graph .k-chart {
         height: 100%;
-        max-width: 50vw;
     }
 
         .weather-graph .k-chart > svg > g > path:first-child {
@@ -159,5 +158,14 @@ html, body {
 
     .location-img {
         min-height: 30vh;
+    }
+
+    .weather-graph {
+        height: 50vh;
+        margin: auto;
+    }
+
+    .wind-details {
+        display: none; /* not enough space on mobile */
     }
 }
